--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpeg" href="/assets/mouaine.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <title>DAHMOUN Mouaine Aymen | Developer</title>
+
+    <meta
+      name="description"
+      content="Portfolio of DAHMOUN Mouaine Aymen — a passionate developer specializing in Mobile, Web, and Desktop Development, PERN stack, Automation, and DevOps."
+    />
+
+    <meta
+      name="keywords"
+      content="DAHMOUN Mouaine Aymen, dahmoun, Dahmoun-aymen developer portfolio, mobile development, web development, desktop development, PERN stack, automation, devops, React, Node.js"
+    />
+
+    <meta name="author" content="DAHMOUN Mouaine Aymen" />
+
+    <meta property="og:title" content="DAHMOUN Mouaine Aymen | Developer Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore my portfolio: mobile, web, and desktop development, PERN stack, automation, and DevOps projects."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-link.com" />
+    <meta property="og:image" content="/assets/logo.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DAHMOUN Mouaine Aymen | Developer Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Passionate developer with expertise in mobile, web, and desktop apps, PERN stack, automation, and DevOps."
+    />
+    <meta name="twitter:image" content="/assets/logo.jpg" />
   </head>
   <body>
     <div id="root"></div>
