--- a/index.html
+++ b/index.html
@@ -1,41 +1,47 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/assets/mouaine.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/jpeg" href="/assets/mouaine.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>DAHMOUN Mouaine Aymen | Developer</title>
+  <title>DAHMOUN Mouaine Aymen | Developer</title>
 
-    <meta
-      name="description"
-      content="Portfolio of DAHMOUN Mouaine Aymen — a passionate developer specializing in Mobile, Web, and Desktop Development, PERN stack, Automation, and DevOps."
-    />
+  <!-- Primary SEO -->
+  <meta
+    name="description"
+    content="Portfolio of DAHMOUN Mouaine Aymen — a passionate developer specializing in Mobile, Web, and Desktop Development, PERN stack, Automation, and DevOps."
+  />
+  <meta
+    name="keywords"
+    content="dahmoun mouaine aymen portfolio, aymen developer, mobile developer, web developer, PERN stack, automation, devops, react, node.js"
+  />
+  <meta name="author" content="DAHMOUN Mouaine Aymen" />
 
-    <meta
-      name="keywords"
-      content="DAHMOUN Mouaine Aymen, dahmoun, Dahmoun-aymen developer portfolio, mobile development, web development, desktop development, PERN stack, automation, devops, React, Node.js"
-    />
+  <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
+  <meta property="og:title" content="DAHMOUN Mouaine Aymen | Developer" />
+  <meta
+    property="og:description"
+    content="Explore my portfolio — mobile, web & desktop development, PERN stack, automation, and DevOps projects."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://your-portfolio-link.com" />
+  <meta property="og:image" content="/assets/mouaine.jpg" />
+  <meta property="og:image:alt" content="Aymen Dahmoun — Developer Portfolio" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-    <meta name="author" content="DAHMOUN Mouaine Aymen" />
+  <!-- Twitter (X) -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="DAHMOUN Mouaine Aymen | Developer" />
+  <meta
+    name="twitter:description"
+    content="Passionate developer with expertise in mobile, web, and desktop apps, PERN stack, automation, and DevOps."
+  />
+  <meta name="twitter:image" content="/assets/mouaine.jpg" />
+  <meta name="twitter:image:alt" content="Aymen Dahmoun — Developer Portfolio" />
+</head>
 
-    <meta property="og:title" content="DAHMOUN Mouaine Aymen | Developer Portfolio" />
-    <meta
-      property="og:description"
-      content="Explore my portfolio: mobile, web, and desktop development, PERN stack, automation, and DevOps projects."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-portfolio-link.com" />
-    <meta property="og:image" content="/assets/logo.jpg" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="DAHMOUN Mouaine Aymen | Developer Portfolio" />
-    <meta
-      name="twitter:description"
-      content="Passionate developer with expertise in mobile, web, and desktop apps, PERN stack, automation, and DevOps."
-    />
-    <meta name="twitter:image" content="/assets/logo.jpg" />
-  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
