--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
   <title>DAHMOUN Mouaine Aymen | Developer</title>
 
-  <!-- Primary SEO -->
   <meta
     name="description"
     content="Portfolio of DAHMOUN Mouaine Aymen — a passionate developer specializing in Mobile, Web, and Desktop Development, PERN stack, Automation, and DevOps."
@@ -18,20 +17,18 @@
   />
   <meta name="author" content="DAHMOUN Mouaine Aymen" />
 
-  <!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
   <meta property="og:title" content="DAHMOUN Mouaine Aymen | Developer" />
   <meta
     property="og:description"
     content="Explore my portfolio — mobile, web & desktop development, PERN stack, automation, and DevOps projects."
   />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://your-portfolio-link.com" />
+  <meta property="og:url" content="https://aymendahmoun.me" />
   <meta property="og:image" content="/assets/mouaine.jpg" />
   <meta property="og:image:alt" content="Aymen Dahmoun — Developer Portfolio" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 
-  <!-- Twitter (X) -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="DAHMOUN Mouaine Aymen | Developer" />
   <meta
