added pic for site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpeg" href="/assets/mouaine.jpg" />
+  <link rel="icon" type="image/jpeg" href="src/assets/mouaine.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>DAHMOUN Mouaine Aymen | Developer</title>
@@ -24,7 +24,7 @@
   />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aymendahmoun.me" />
-  <meta property="og:image" content="/assets/mouaine.jpg" />
+  <meta property="og:image" content="src/assets/mouaine.jpg" />
   <meta property="og:image:alt" content="Aymen Dahmoun — Developer Portfolio" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -35,7 +35,7 @@
     name="twitter:description"
     content="Passionate developer with expertise in mobile, web, and desktop apps, PERN stack, automation, and DevOps."
   />
-  <meta name="twitter:image" content="/assets/mouaine.jpg" />
+  <meta name="twitter:image" content="src/assets/mouaine.jpg" />
   <meta name="twitter:image:alt" content="Aymen Dahmoun — Developer Portfolio" />
 </head>
 
